# todo

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
products/: forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py
products_class/: apps.py  urls.py  views.py
templates/: 403.html  base.html  home.html  messages.html  navbar.html  pagination.html
templates/products/: product_delete.html  product_list.html  product_update.html
templates/products_func/: product-delete.html  product-list.html  product-update.html
