[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Alisher007 <alisherx07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
django-crispy-forms = "^2.0"
pillow = "^10.0.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"
crispy-bootstrap4 = "^2022.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
